--- a/MyFirstFileProject.ipynb
+++ b/MyFirstFileProject.ipynb
@@ -9,6 +9,9 @@
     "from math import sqrt\n",
     "\n",
     "def racine_carree(n):\n",
+    "    '''Cette fonction permet de calculer le racine carrée d'un nombre si celui-ci est supérieur à 0 et renvoie une erreur si celui-ci est inférieur à 0 '''  \n",
+    "    if n<0:\n",
+    "        raise ValueError('Vous avez entré un nombre inférieur à 0 ')\n",
     "    return sqrt(n)"
    ]
   },
@@ -30,6 +33,28 @@
    ],
    "source": [
     "racine_carree(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Vous avez entré un nombre inférieur à 0 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-19b05d223af6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mracine_carree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-510571d405b6>\u001b[0m in \u001b[0;36mracine_carree\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m'''Cette fonction permet de calculer le racine carrée d'un nombre si celui-ci est supérieur à 0 et renvoie une erreur si celui-ci est inférieur à 0 '''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Vous avez entré un nombre inférieur à 0 '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Vous avez entré un nombre inférieur à 0 "
+     ]
+    }
+   ],
+   "source": [
+    "racine_carree(-5)"
    ]
   },
   {
